fix bug where screen overflows on x-axis

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -42,6 +42,7 @@ body {
   background-size: cover;
   color: white;
   font-family: 'Merriweather', serif;
+  overflow-x: hidden;
 }
 
 header {
